--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="hero-img">
+        <div class="hero-img-container">
           <div class="hero-img-background">
             <img src="./assets/hero-circle.png" alt="" />
           </div>
@@ -85,8 +85,8 @@
       <section class="choose">
         <h1>Why Choose TechWave</h1>
         <div class="choose-cards-container">
-          <div class="choose-cards">
-            <img src="" alt="" />
+          <div class="premium-card">
+            <img src="./assets/headphone.png" alt="" />
             <h2>Premium Audio Quality</h2>
             <p>
               Experience crystal-clear sound with professional-grade recording
@@ -94,23 +94,23 @@
               for optimal listening across all devices and platforms.
             </p>
           </div>
-          <div class="choose-cards">
-            <img src="" alt="" />
+          <div class="mobile-card">
+            <img src="./assets/device.png" alt="" />
             <h2>Mobile Friendly</h2>
             <p>
               Listen on the go with seamless mobile experience and offline
               downloads.
             </p>
           </div>
-          <div class="choose-cards">
-            <img src="" alt="" />
+          <div class="global-card">
+            <img src="./assets/location.png" alt="" />
             <h2>Global Community</h2>
             <p>
               Connect with tech enthusiasts from over 120 countries worldwide.
             </p>
           </div>
-          <div class="choose-cards">
-            <img src="" alt="" />
+          <div class="exlusive-card">
+            <img src="./assets/" alt="" />
             <h2>Exclusive Interviews</h2>
             <p>
               Get unprecedented access to industry titans, startup founders, and
@@ -119,13 +119,87 @@
               failures, and success strategies.
             </p>
           </div>
-          <div class="choose-cards">
-            <img src="" alt="" />
+          <div class="rich-card">
+            <img src="./assets/resource.png" alt="" />
             <h2>Rich Resources</h2>
             <p>
               Access show notes, transcripts, and additional learning materials
               for every episode.
             </p>
+          </div>
+        </div>
+      </section>
+      <section class="featured">
+        <div class="featured-container">
+          <div class="featured-episodes-container">
+            <h1>Featured Episodes</h1>
+            <div class="featured-episodes-cards">
+              <div class="cards">
+                <img src="" alt="" />
+                <h2>The Future of AI in Everyday Life</h2>
+                <p>
+                  Exploring how artificial intelligence is transforming our
+                  daily routines and what to expect in the next decade.
+                </p>
+                <div class="time">
+                  <img src="./assets/clock.png" alt="" />
+                  <p>42 min</p>
+                </div>
+              </div>
+              <div class="cards">
+                <img src="" alt="" />
+                <h2>Building Better Habits for Remote Work</h2>
+                <p>
+                  Practical strategies for staying productive and maintaining
+                  work-life balance in a remote environment.
+                </p>
+
+                <div class="time">
+                  <img src="./assets/clock.png" alt="" />
+                  <p>35 min</p>
+                </div>
+              </div>
+              <div class="cards">
+                <img src="" alt="" />
+                <h2>Career Growth in Tech: A Roadmap</h2>
+                <p>
+                  Expert advice on navigating your tech career from junior
+                  developer to senior leadership roles.
+                </p>
+
+                <div class="time">
+                  <img src="./assets/clock.png" alt="" />
+                  <p>51 min</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="host-container">
+            <h1>Meet The Host</h1>
+            <div class="host-info-container">
+              <div class="host-img">
+                <img src="./assets/host.png" alt="" />
+              </div>
+              <div class="host-info">
+                <h2>Alex Kumar</h2>
+                <p>
+                  Tech entrepreneur, productivity expert, and lifelong learner.
+                  Alex has been in the tech industry for over 10 years, working
+                  with startups and Fortune 500 companies. Through TechWave,
+                  Alex shares insights from industry leaders and practical
+                  advice for anyone looking to grow in tech.
+                </p>
+                <div class="host-socials">
+                  <img src="./assets/linkedin.png" alt="" /><img
+                    src="./assets/x.png"
+                    alt=""
+                  /><img src="./assets/instagram.png" alt="" /><img
+                    src="./assets/youtube.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
