--- a/index.html
+++ b/index.html
@@ -133,43 +133,100 @@
         <div class="featured-container">
           <div class="featured-episodes-container">
             <h1>Featured Episodes</h1>
-            <div class="featured-episodes-cards">
+            <div class="featured-episodes-cards-container">
               <div class="cards">
-                <img src="" alt="" />
-                <h2>The Future of AI in Everyday Life</h2>
-                <p>
-                  Exploring how artificial intelligence is transforming our
-                  daily routines and what to expect in the next decade.
-                </p>
-                <div class="time">
-                  <img src="./assets/clock.png" alt="" />
-                  <p>42 min</p>
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/SXMjsa4ANx4?si=NUFaQD4ApP8mpOKf"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="card-info">
+                  <h2>The Future of AI in Everyday Life</h2>
+                  <p>
+                    Exploring how artificial intelligence is transforming our
+                    daily routines and what to expect in the next decade.
+                  </p>
+                  <div class="time">
+                    <img src="./assets/clock.png" alt="" />
+                    <p>42 min</p>
+                  </div>
                 </div>
               </div>
               <div class="cards">
-                <img src="" alt="" />
-                <h2>Building Better Habits for Remote Work</h2>
-                <p>
-                  Practical strategies for staying productive and maintaining
-                  work-life balance in a remote environment.
-                </p>
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/aNhe42ePVMQ?si=AZbCUFGnj-TTM7Z6"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="card-info">
+                  <h2>Building Better Habits for Remote Work</h2>
+                  <p>
+                    Practical strategies for staying productive and maintaining
+                    work-life balance in a remote environment.
+                  </p>
 
-                <div class="time">
-                  <img src="./assets/clock.png" alt="" />
-                  <p>35 min</p>
+                  <div class="time">
+                    <img src="./assets/clock.png" alt="" />
+                    <p>35 min</p>
+                  </div>
                 </div>
               </div>
               <div class="cards">
-                <img src="" alt="" />
-                <h2>Career Growth in Tech: A Roadmap</h2>
-                <p>
-                  Expert advice on navigating your tech career from junior
-                  developer to senior leadership roles.
-                </p>
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/glyD0HDrIns?si=HiZkf4O0f4MnBEwX"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="card-info">
+                  <h2>Career Growth in Tech: A Roadmap</h2>
+                  <p>
+                    Expert advice on navigating your tech career from junior
+                    developer to senior leadership roles.
+                  </p>
 
-                <div class="time">
-                  <img src="./assets/clock.png" alt="" />
-                  <p>51 min</p>
+                  <div class="time">
+                    <img src="./assets/clock.png" alt="" />
+                    <p>51 min</p>
+                  </div>
                 </div>
               </div>
             </div>
