--- a/index.html
+++ b/index.html
@@ -247,19 +247,48 @@
                   advice for anyone looking to grow in tech.
                 </p>
                 <div class="host-socials">
-                  <img src="./assets/linkedin.png" alt="" /><img
-                    src="./assets/x.png"
-                    alt=""
-                  /><img src="./assets/instagram.png" alt="" /><img
-                    src="./assets/youtube.png"
-                    alt=""
-                  />
+                  <div class="social-icon">
+                    <img src="./assets/linkedin.png" alt="" />
+                  </div>
+                  <div class="social-icon">
+                    <img src="./assets/x.png" alt="" />
+                  </div>
+                  <div class="social-icon">
+                    <img src="./assets/instagram.png" alt="" />
+                  </div>
+                  <div class="social-icon">
+                    <img src="./assets/youtube.png" alt="" />
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer-container">
+          <h1>TechWave</h1>
+          <div class="footer-links">
+            <div class="links">
+              <img src="./assets/spotify.png" alt="" />
+              <p>Spotify</p>
+            </div>
+            <div class="links">
+              <img src="./assets/apple-podcast.png" alt="" />
+              <p>Apple Podcasts</p>
+            </div>
+            <div class="links">
+              <img src="./assets/youtube-podcast.png" alt="" />
+              <p>YouTube</p>
+            </div>
+            <div class="links">
+              <img src="./assets/twitter.png" alt="" />
+              <p>Twitter</p>
+            </div>
+          </div>
+          <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
