--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <img src="./assets/microphone.png" alt="" />
           </div>
         </div>
+        <div class="new-badge">NEW</div>
+
         <div class="hero-content">
           <h1>TechWave</h1>
           <p>
@@ -109,8 +111,8 @@
               Connect with tech enthusiasts from over 120 countries worldwide.
             </p>
           </div>
-          <div class="exlusive-card">
-            <img src="./assets/" alt="" />
+          <div class="exclusive-card">
+            <img src="./assets/device.png" alt="" />
             <h2>Exclusive Interviews</h2>
             <p>
               Get unprecedented access to industry titans, startup founders, and
