completed desktop first design, fixed backgroud image issue of hero and footer section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="">
         <h2>Tech<span>Wave</span></h2>
         <div class="nav-links">
           <ul>
@@ -26,6 +26,7 @@
         <button class="btn-primary">Subscribe</button>
       </nav>
     </header>
+
     <main>
       <section class="hero">
         <div class="hero-img-container">
@@ -131,6 +132,7 @@
           </div>
         </div>
       </section>
+
       <section class="featured">
         <div class="featured-container">
           <div class="featured-episodes-container">
@@ -267,7 +269,8 @@
           </div>
         </div>
       </section>
-      <footer>
+
+      <footer class="">
         <div class="footer-container">
           <h1>TechWave</h1>
           <div class="footer-links">
