--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="">
+      <nav>
         <h2>Tech<span>Wave</span></h2>
         <div class="nav-links">
           <ul>
@@ -23,7 +23,8 @@
             <li><a href="">Host</a></li>
           </ul>
         </div>
-        <button class="btn-primary">Subscribe</button>
+        <button class="btn-primary btn-nav">Subscribe</button>
+        <img src="./assets/hamburger-menu.png" alt="" />
       </nav>
     </header>
 
@@ -86,49 +87,51 @@
       </section>
 
       <section class="choose">
-        <h1>Why Choose TechWave</h1>
-        <div class="choose-cards-container">
-          <div class="premium-card">
-            <img src="./assets/headphone.png" alt="" />
-            <h2>Premium Audio Quality</h2>
-            <p>
-              Experience crystal-clear sound with professional-grade recording
-              equipment and expert audio engineering. Every episode is mastered
-              for optimal listening across all devices and platforms.
-            </p>
-          </div>
-          <div class="mobile-card">
-            <img src="./assets/device.png" alt="" />
-            <h2>Mobile Friendly</h2>
-            <p>
-              Listen on the go with seamless mobile experience and offline
-              downloads.
-            </p>
-          </div>
-          <div class="global-card">
-            <img src="./assets/location.png" alt="" />
-            <h2>Global Community</h2>
-            <p>
-              Connect with tech enthusiasts from over 120 countries worldwide.
-            </p>
-          </div>
-          <div class="exclusive-card">
-            <img src="./assets/device.png" alt="" />
-            <h2>Exclusive Interviews</h2>
-            <p>
-              Get unprecedented access to industry titans, startup founders, and
-              tech visionaries. Our host secures exclusive conversations you
-              won't find anywhere else, diving deep into their journeys,
-              failures, and success strategies.
-            </p>
-          </div>
-          <div class="rich-card">
-            <img src="./assets/resource.png" alt="" />
-            <h2>Rich Resources</h2>
-            <p>
-              Access show notes, transcripts, and additional learning materials
-              for every episode.
-            </p>
+        <div class="choose-container">
+          <h1>Why Choose TechWave</h1>
+          <div class="choose-cards-container">
+            <div class="premium-card">
+              <img src="./assets/headphone.png" alt="" />
+              <h2>Premium Audio Quality</h2>
+              <p>
+                Experience crystal-clear sound with professional-grade recording
+                equipment and expert audio engineering. Every episode is
+                mastered for optimal listening across all devices and platforms.
+              </p>
+            </div>
+            <div class="mobile-card">
+              <img src="./assets/device.png" alt="" />
+              <h2>Mobile Friendly</h2>
+              <p>
+                Listen on the go with seamless mobile experience and offline
+                downloads.
+              </p>
+            </div>
+            <div class="global-card">
+              <img src="./assets/location.png" alt="" />
+              <h2>Global Community</h2>
+              <p>
+                Connect with tech enthusiasts from over 120 countries worldwide.
+              </p>
+            </div>
+            <div class="exclusive-card">
+              <img src="./assets/device.png" alt="" />
+              <h2>Exclusive Interviews</h2>
+              <p>
+                Get unprecedented access to industry titans, startup founders,
+                and tech visionaries. Our host secures exclusive conversations
+                you won't find anywhere else, diving deep into their journeys,
+                failures, and success strategies.
+              </p>
+            </div>
+            <div class="rich-card">
+              <img src="./assets/resource.png" alt="" />
+              <h2>Rich Resources</h2>
+              <p>
+                Access show notes, transcripts, and additional learning
+                materials for every episode.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -272,7 +275,7 @@
 
       <footer class="">
         <div class="footer-container">
-          <h1>TechWave</h1>
+          <h1>Tech<span>Wave</span></h1>
           <div class="footer-links">
             <div class="links">
               <img src="./assets/spotify.png" alt="" />
